--- a/src/main/resources/com/example/kierki/game.fxml
+++ b/src/main/resources/com/example/kierki/game.fxml
@@ -3,8 +3,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane maxHeight="480.0" maxWidth="640.0" minHeight="480.0" minWidth="640.0" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.kierki.GameController">
    <children>
@@ -16,6 +16,10 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <HBox fx:id="playerCardsBox" layoutX="165.0" layoutY="337.0" prefHeight="100.0" prefWidth="310.0" />
+      <HBox fx:id="playerCardsBox" layoutX="165.0" layoutY="348.0" prefHeight="89.0" prefWidth="310.0" />
+      <Pane fx:id="otherPlayedCardPane1" layoutX="202.0" layoutY="188.0" prefHeight="103.0" prefWidth="65.0" />
+      <Pane fx:id="playerPlayedCardPane" layoutX="287.0" layoutY="239.0" prefHeight="103.0" prefWidth="65.0" />
+      <Pane fx:id="otherPlayedCardPane2" layoutX="287.0" layoutY="122.0" prefHeight="103.0" prefWidth="65.0" />
+      <Pane fx:id="otherPlayedCardPane3" layoutX="371.0" layoutY="188.0" prefHeight="103.0" prefWidth="65.0" />
    </children>
 </AnchorPane>
