--- a/src/main/resources/com/example/kierki/game.fxml
+++ b/src/main/resources/com/example/kierki/game.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="480.0" maxWidth="640.0" minHeight="480.0" minWidth="640.0" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.kierki.GameController">
@@ -16,10 +16,10 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <HBox fx:id="playerCardsBox" layoutX="165.0" layoutY="348.0" prefHeight="89.0" prefWidth="310.0" />
-      <Pane fx:id="otherPlayedCardPane1" layoutX="202.0" layoutY="188.0" prefHeight="103.0" prefWidth="65.0" />
-      <Pane fx:id="playerPlayedCardPane" layoutX="287.0" layoutY="239.0" prefHeight="103.0" prefWidth="65.0" />
-      <Pane fx:id="otherPlayedCardPane2" layoutX="287.0" layoutY="122.0" prefHeight="103.0" prefWidth="65.0" />
-      <Pane fx:id="otherPlayedCardPane3" layoutX="371.0" layoutY="188.0" prefHeight="103.0" prefWidth="65.0" />
+      <HBox fx:id="playerCardsBox" layoutX="3.0" layoutY="348.0" prefHeight="89.0" prefWidth="632.0" />
+      <ImageView fx:id="playerPlayedCardView" fitHeight="103.0" fitWidth="65.0" layoutX="287.0" layoutY="240.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="otherPlayedCardView1" fitHeight="103.0" fitWidth="65.0" layoutX="203.0" layoutY="188.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="otherPlayedCardView2" fitHeight="103.0" fitWidth="65.0" layoutX="288.0" layoutY="107.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="otherPlayedCardView3" fitHeight="103.0" fitWidth="65.0" layoutX="371.0" layoutY="188.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
