--- a/src/main/resources/com/example/kierki/game.fxml
+++ b/src/main/resources/com/example/kierki/game.fxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="480.0" maxWidth="640.0" minHeight="480.0" minWidth="640.0" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.kierki.GameController">
+<AnchorPane fx:id="mainGamePane" maxHeight="480.0" maxWidth="640.0" minHeight="480.0" minWidth="640.0" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.kierki.GameController">
    <children>
       <Label fx:id="otherPlayerLabel2" alignment="CENTER" layoutX="268.0" layoutY="5.0" prefHeight="17.0" prefWidth="103.0" text="Player2" />
       <Label fx:id="otherPlayerLabel1" alignment="CENTER" layoutX="-28.0" layoutY="231.0" prefHeight="17.0" prefWidth="103.0" rotate="90.0" text="Player1" />
@@ -29,5 +31,15 @@
             <Font size="14.0" />
          </font>
       </Label>
+      <Pane fx:id="winnerPane" layoutX="191.0" layoutY="163.0" prefHeight="152.0" prefWidth="259.0">
+         <children>
+            <Label fx:id="winnerLabel" alignment="CENTER" layoutX="57.0" layoutY="55.0" prefHeight="43.0" prefWidth="146.0" text="Winner">
+               <font>
+                  <Font size="29.0" />
+               </font>
+            </Label>
+            <Button fx:id="exitButton" layoutX="97.0" layoutY="104.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="65.0" text="Exit" />
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
