--- a/src/main/resources/com/example/kierki/game.fxml
+++ b/src/main/resources/com/example/kierki/game.fxml
@@ -33,12 +33,12 @@
       </Label>
       <Pane fx:id="winnerPane" layoutX="191.0" layoutY="163.0" prefHeight="152.0" prefWidth="259.0">
          <children>
-            <Label fx:id="winnerLabel" alignment="CENTER" layoutX="57.0" layoutY="55.0" prefHeight="43.0" prefWidth="146.0" text="Winner">
+            <Label fx:id="winnerLabel" alignment="CENTER" layoutX="4.0" layoutY="47.0" prefHeight="43.0" prefWidth="251.0" text="Winner">
                <font>
-                  <Font size="29.0" />
+                  <Font size="24.0" />
                </font>
             </Label>
-            <Button fx:id="exitButton" layoutX="97.0" layoutY="104.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="65.0" text="Exit" />
+            <Button layoutX="97.0" layoutY="104.0" mnemonicParsing="false" onAction="#exit" prefHeight="25.0" prefWidth="65.0" text="Exit" />
          </children>
       </Pane>
    </children>
