--- a/src/main/resources/com/example/kierki/waiting.fxml
+++ b/src/main/resources/com/example/kierki/waiting.fxml
@@ -6,17 +6,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.kierki.WaitingController">
+<AnchorPane fx:id="waitingAnchorPane" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.kierki.WaitingController">
    <children>
       <Pane fx:id="invitePane" layoutX="174.0" layoutY="172.0" prefHeight="89.0" prefWidth="291.0">
          <children>
-            <TextField fx:id="inviteIdField" layoutX="22.0" layoutY="32.0" prefHeight="25.0" prefWidth="89.0" promptText="Id" />
+            <TextField fx:id="inviteIdField" layoutX="22.0" layoutY="32.0" prefHeight="25.0" prefWidth="89.0" promptText="Username" />
             <Button layoutX="169.0" layoutY="32.0" mnemonicParsing="false" onAction="#invitePlayerButton" prefHeight="25.0" prefWidth="96.0" text="Invite" />
          </children>
       </Pane>
       <Label layoutX="507.0" layoutY="5.0" text="Connected Players:" />
-      <VBox fx:id="connectedPlayersVBox" layoutX="483.0" layoutY="22.0" prefHeight="200.0" prefWidth="149.0" />
-      <Label fx:id="waitingLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="241.0" layoutY="261.0" prefHeight="25.0" prefWidth="157.0" text="Waiting for Players..." textAlignment="CENTER" />
+      <VBox fx:id="connectedPlayersVBox" layoutX="482.0" layoutY="31.0" prefHeight="107.0" prefWidth="149.0" />
+      <Label fx:id="waitingLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="241.0" layoutY="269.0" prefHeight="25.0" prefWidth="157.0" text="Waiting for Players..." textAlignment="CENTER">
+         <font>
+            <Font size="15.0" />
+         </font></Label>
    </children>
 </AnchorPane>
